--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 beautifulsoup4>=4.12.3
 configparser>=7.1.0
-langchain>=0.2.11,
+langchain>=0.2.11
 langchain-openai>=0.1.6
 langchain-core>=0.2.36
 langchain-community>=0.2.10
