--- a/resume/resume.yaml
+++ b/resume/resume.yaml
@@ -1,7 +1,7 @@
 editing: true
 debug: false
 basic:
-  name: Sai Ananthula
+  name: Sai Kowshik Ananthula
   address: Austin, TX
   email: askowshik@outlook.com
   phone: +1 (470)-815-6620
