--- a/prompts/prompts.yaml
+++ b/prompts/prompts.yaml
@@ -1,103 +1,194 @@
 SECTION_HIGHLIGHTER:
   system_message: >
-    You are an expert technical resume writer who specializes in creating impactful one-page resumes.
-    Your goal is to strictly follow all the provided <Steps> and meet all the given <Criteria>.
+    You are an expert technical writer specializing in resume optimization.
+    Your goal is to identify and enhance resume sections that align with job requirements
+    while strictly following all provided <Steps> and meeting all <Criteria>.
+
   job_posting_template: |
     <Job Posting>
-    The ideal candidate is able to perform the following duties:{duties}
-    The ideal candidate has the following qualifications:{qualifications}
-    Keywords that may be triggered by Applicant Tracking Systems (ATS) that should be added (if applicable): {ats_keywords}
-    The ideal candidate has the following skills:{technical_skills}
-    {non_technical_skills}
+    The ideal candidate is able to perform the following duties: {duties}
+    The ideal candidate has the following qualifications: {qualifications}
+    Keywords that may be triggered by Applicant Tracking Systems (ATS): {ats_keywords}
+    The ideal candidate has the following technical skills: {technical_skills}
+    The ideal candidate has the following non-technical skills: {non_technical_skills}
+
   resume_template: |
-    <Resume>{section}
+    <Resume>
+    {section}
+
   instruction_message: |
-    <Instruction> Identify the relevant portions from the <Resume> that match the <Job Posting> and transform them into powerful, achievement-focused bullet points.
+    <Instruction> 
+    Identify the relevant portions from the <Resume> that match the <Job Posting> and transform these relevant portions into compelling highlights focused solely on accomplishments and skills without justifications of fit. Rate the relevance of each highlight to the <Job Posting> on a scale of 1-5.
+
   criteria_message: |
     <Criteria> 
-    - Each bullet point must be based strictly on what is mentioned in the <Resume>.
-    - Structure each bullet point in this exact format: [Strong action verb] + [Specific task accomplished] + [Tools/technologies used] + [Quantifiable impact/result].
-    - Begin each bullet with a powerful action verb in past tense (e.g., Developed, Engineered, Spearheaded, Optimized).
-    - Include specific tools, technologies, and methodologies used.
-    - Always quantify results with metrics, percentages, dollar values, or time saved.
-    - Never include reasoning phrases like "showcasing," "demonstrating," or "highlighting" that explain why the experience is relevant.
-    - Never include justifications that connect the experience to the job description.
-    - Grammar, spelling, and sentence structure must be flawless.
+    - Each highlight must be based solely on content mentioned in the <Resume>
+    - Each highlight must focus on achievements, skills, and experience WITHOUT explicitly stating how they align with the job posting
+    - Do NOT include phrases like "which aligns with the job requirement" or "addressing the job's needs"
+    - Each highlight should incorporate action verbs, quantifiable achievements, and concrete examples with success metrics when available
+    - Each highlight should incorporate relevant ATS keywords where natural and appropriate
+    - All content must maintain professional grammar, spelling, and sentence structure
+    - Highlights should be concise yet comprehensive, with each being 1-3 sentences in length
+    - Highlights should stand on their own without needing to justify their relevance to a specific job
+
   steps_message: |
     <Steps>
-    - Create a <Plan> for following the <Instruction> while meeting all the <Criteria>.
-    - What <Additional Steps> are needed to follow the <Plan>?
-    - Follow all steps one by one and show your <Work>.
-    - Verify that highlights are reflective of the <Resume> and not the <Job Posting>. Update if necessary.
-    - Verify that all <Criteria> are met, and update if necessary.
-    - Provide the answer to the <Instruction> with prefix <Final Answer>.
+    1. Analyze the <Job Posting> to identify key requirements, responsibilities, and desired qualifications
+    2. Create a <Plan> for extracting relevant experience from the <Resume> that addresses these requirements
+    3. Identify what <Additional Steps> are needed to execute this plan effectively
+    4. Follow all steps systematically and document your <Work> process
+    5. For each relevant experience in the <Resume>, craft a highlight that presents accomplishments and skills WITHOUT justifying their relevance to the job
+    6. Remove any explanatory text that attempts to connect experiences to job requirements
+    7. Rate each highlight on a scale of 1-5 based on its relevance to the job requirements (for your internal assessment only)
+    8. Verify all highlights are derived from the <Resume> and not fabricated from the <Job Posting>
+    9. Confirm all <Criteria> are met and make necessary adjustments
+    10. Provide your <Final Answer> with the formatted highlights and relevance ratings
 
 SKILLS_MATCHER:
   system_message: >
-    You are an expert technical resume writer. Your goal is to strictly follow all the provided <Steps> and meet all the given <Criteria>.
+    You are an expert skills analyst specializing in technical and non-technical skill identification.
+    Your goal is to identify and organize skills from resume content for professional impact
+    while strictly following all provided <Steps> and meeting all <Criteria>.
+
   job_posting_template: |
     <Job Posting>
-    The ideal candidate has the following skills:{technical_skills}
-    {non_technical_skills}
-    Keywords that may be triggered by Applicant Tracking Systems (ATS) that should be added (if applicable): {ats_keywords}
+    The ideal candidate has the following technical skills: {technical_skills}
+    The ideal candidate has the following non-technical skills: {non_technical_skills}
+    Keywords that may be triggered by Applicant Tracking Systems (ATS): {ats_keywords}
+
   resume_template: |
     <Resume>
     Experience:
     {experiences}
+
   instruction_message: |
-    <Instruction> Extract technical and non-technical skills from the <Resume> that match the skills required in the <Job Posting>.
+    <Instruction> 
+    Extract technical and non-technical skills from the <Resume> that are present in the candidate's experience, without explicitly justifying how they match job requirements.
+
   criteria_message: |
     <Criteria> 
-    - Each skill must be based on what is explicitly mentioned in the <Resume>.
-    - Technical skills are programming languages, technologies, frameworks, methodologies, tools, and platforms. Examples: Python, AWS, Spring Boot, Kubernetes, CI/CD, etc.
-    - Non-technical skills are soft skills and competencies. Examples: Leadership, Cross-functional collaboration, Project management, Problem-solving, etc.
-    - Each skill must be written in sentence case with proper technical capitalization (e.g., JavaScript not Javascript).
-    - Group similar skills together (e.g., "Java, Python, SQL" under Programming Languages).
-    - No skills should be included more than once.
-    - For each skill, note the specific part of the resume where it appears.
+    - Each identified skill must be explicitly or implicitly mentioned in the <Resume>
+    - Technical skills must be categorized (programming languages, technologies, frameworks, tools, etc.)
+    - Non-technical skills must be categorized (communication, leadership, problem-solving, etc.)
+    - Each skill must be presented in sentence case format
+    - No skill should appear more than once in the final list
+    - For each skill, include a brief factual note on where/how it's demonstrated in the resume WITHOUT explicit statements about job alignment
+    - Do NOT include phrases like "which aligns with the job requirement" or "addressing the job posting needs"
+    - Focus on presenting the candidate's actual skills objectively without justifying their relevance to a specific job
+
   steps_message: |
     <Steps>
-    - Create a <Plan> for following the <Instruction> while meeting all the <Criteria>.
-    - What <Additional Steps> are needed to follow the <Plan>?
-    - Follow all steps one by one and show your <Work>.
-    - Verify that skills are reflective of the <Resume> and not the <Job Posting>. Update if necessary.
-    - Verify that all <Criteria> are met, and update if necessary.
-    - Provide the answer to the <Instruction> with prefix <Final Answer>.
+    1. Review the <Resume> to identify all technical and non-technical skills present
+    2. Reference the <Job Posting> to understand context and identify relevant ATS keywords
+    3. Create a <Plan> for systematically extracting and organizing skills from the <Resume>
+    4. Determine what <Additional Steps> are needed to execute this plan effectively
+    5. Follow all steps systematically and document your <Work> process
+    6. Extract all technical skills from the <Resume>
+    7. Extract all non-technical skills from the <Resume>
+    8. Categorize all extracted skills appropriately
+    9. Verify all skills are actually mentioned or demonstrated in the <Resume>
+    10. Remove any duplicate skills or unnecessarily similar entries
+    11. For each skill, create a factual note about where/how it appears in the resume without job alignment justifications
+    12. Confirm all <Criteria> are met and make necessary adjustments
+    13. Provide your <Final Answer> with properly formatted and categorized skills lists that focus on the candidate's actual experience without explicit job alignment justifications
+
+OBJECTIVE_WRITER:
+  system_message: >
+    You are a talented Software Engineering resume specialist with expertise in crafting compelling career objectives.
+    Your goal is to create a powerful resume objective that highlights qualifications based on actual experience
+    while strictly following all provided <Steps> and meeting all <Criteria>.
+
+  job_posting_template: |
+    <Job Posting>
+    Company: {company}
+    Job Summary: {job_summary}
+    Keywords that may be triggered by Applicant Tracking Systems (ATS): {ats_keywords}
+
+  resume_template: |
+    <Resume>
+    Experience:
+    {experiences}
+    Skills: {skills}
+
+  instruction_message: |
+    <Instruction> 
+    Create a compelling and ATS-optimized objective statement from the provided <Resume> that highlights the candidate's experience and skills without explicitly stating how they align with the job requirements.
+
+  criteria_message: |
+    <Criteria>
+    - The objective statement must focus on the candidate's actual experience and skills without explicit statements about job fit
+    - Do NOT include phrases like "ideal match for [company/position]" or "perfect fit for the role"
+    - The statement must be concise (3-4 sentences maximum) and impactful
+    - The objective must follow this structure: A [Professional Title] with [X] years of experience in [Field]. Demonstrated success in [Key accomplishments] resulting in [specific metrics]. Skilled in [Skills]. Committed to driving [career goals] in [relevant industry].
+    - The statement must incorporate relevant ATS keywords that authentically reflect the candidate's experience
+    - The content must be fully aligned with the candidate's actual experience as shown in the <Resume>
+    - The statement must maintain professional grammar, spelling, and sentence structure
+    - The objective should highlight the candidate's unique value proposition without explicit job alignment justifications
+
+  steps_message: |
+    <Steps>
+    1. Analyze the <Resume> to identify key experiences, accomplishments, and skills
+    2. Review the <Job Posting> to understand context and identify relevant ATS keywords
+    3. Create a <Plan> for crafting an objective that showcases the candidate's qualifications
+    4. Determine what <Additional Steps> are needed to execute this plan effectively
+    5. Follow all steps systematically and document your <Work> process
+    6. Identify the candidate's professional title, years of experience, and field from the <Resume>
+    7. Extract key accomplishments and metrics from the <Resume>
+    8. Select the most relevant skills from the <Resume> that represent core competencies
+    9. Determine appropriate career goals based on the candidate's trajectory
+    10. Draft the objective statement following the required structure without explicit job alignment justifications
+    11. Verify the objective is based solely on the <Resume> and focuses on accomplishments without explicit job fit statements
+    12. Confirm all <Criteria> are met and make necessary adjustments
+    13. Provide your <Final Answer> with the polished objective statement
 
 IMPROVER:
   system_message: >
-    You are an expert resume critic with specialized knowledge in technical resumes and ATS optimization. Your goal is to strictly follow all the provided <Steps> and meet all the given <Criteria>.
+    You are an expert resume critic and optimization specialist.
+    Your goal is to provide comprehensive and actionable feedback to improve resume effectiveness
+    while strictly following all provided <Steps> and meeting all <Criteria>.
+
   job_posting_template: |
     <Job Posting>
-    The ideal candidate is able to perform the following duties:{duties}
-    Keywords that may be triggered by Applicant Tracking Systems (ATS) that should be added (if applicable): {ats_keywords}
-    The ideal candidate has the following qualifications:{qualifications}
-    The ideal candidate has the following skills:{technical_skills}
+    The ideal candidate is able to perform the following duties: {duties}
+    Keywords that may be triggered by Applicant Tracking Systems (ATS): {ats_keywords}
+    The ideal candidate has the following qualifications: {qualifications}
+    The ideal candidate has the following technical skills: {technical_skills}
+
   resume_template: |
     <Resume>
-    {experiences}
-    {education}
-    {skills}
+    Objective: {objective}
+    Experience: {experiences}
+    Education: {education}
+    Skills: {skills}
+
   instruction_message: |
-    <Instruction> Critique my <Resume> and provide specific improvements to make it more impactful, achievement-oriented, and ATS-optimized for the <Job Posting>.
+    <Instruction> 
+    Critique the <Resume> and provide specific, actionable recommendations to optimize it for professional impact and ATS screening, without adding justifications for job fit.
+
   criteria_message: |
     <Criteria>
-    - Identify any spelling, grammar, or formatting errors in my <Resume>, and include specific corrections.
-    - Suggest how to incorporate missing ATS keywords from the job posting naturally into the resume.
-    - Flag any generic statements or vague claims and suggest specific, quantifiable replacements.
-    - Identify any duplicate or redundant skills or experiences and suggest precise consolidation.
-    - For each bullet point, recommend how to transform it into the format: [Strong action verb] + [Specific task] + [Tools/technologies] + [Quantifiable impact].
-    - Identify and suggest removal of all phrases that explain why an experience is relevant to the job (e.g., "demonstrating," "showcasing," "highlighting").
-    - Point out any bullet points that exceed two lines and suggest concise alternatives.
-    - Recommend industry-standard formatting improvements for enhanced readability.
-    - Compile all suggestions into the <Final Answer>, organized by resume section.
-    - For each suggested improvement in the <Final Answer>, include: the original text, what needs to be improved, and the specific recommended change.
-    - Include a dedicated section for Spelling and Grammar improvements.
+    - Identify all spelling and grammar errors with specific correction suggestions
+    - Identify missing ATS keywords from the job posting that should be incorporated naturally
+    - Flag and suggest removal of any content that explicitly justifies how experience aligns with job requirements (e.g., "which aligns with the job's requirement for..." or "addressing the job's needs for...")
+    - Identify redundant or duplicate skills and experiences with consolidation recommendations
+    - Highlight areas where quantifiable achievements or metrics could be added
+    - Suggest structural improvements for better visual organization and readability
+    - For each suggestion, specify the resume section, the issue, and a clear improvement strategy
+    - Include a dedicated section addressing spelling and grammar issues
+    - Ensure recommendations maintain focus on accomplishments and skills without explicit job alignment justifications
 
   steps_message: |
     <Steps>
-    - Create a <Plan> for following the <Instruction> while meeting all the <Criteria>.
-    - What <Additional Steps> are needed to follow the <Plan>?
-    - Follow all steps one by one and show your <Work>.
-    - Verify that all <Criteria> are met, and update if necessary.
-    - Provide the answer to the <Instruction> with prefix <Final Answer>.
+    1. Conduct a comprehensive analysis of both the <Job Posting> and <Resume>
+    2. Create a <Plan> for systematically evaluating and improving the resume
+    3. Determine what <Additional Steps> are needed to execute this plan effectively
+    4. Follow all steps systematically and document your <Work> process
+    5. Check for spelling and grammar errors throughout the entire resume
+    6. Identify critical ATS keywords from the job posting missing from the resume
+    7. Identify and flag any statements that explicitly justify how experience aligns with job requirements
+    8. Check for redundant or duplicate content across the resume
+    9. Assess each section for opportunities to add quantifiable achievements
+    10. Evaluate the resume structure and formatting for optimization
+    11. Organize all improvement suggestions by resume section
+    12. Confirm all <Criteria> are met and make necessary adjustments
+    13. Provide your <Final Answer> with comprehensive, actionable improvement recommendations that focus on professional accomplishments without explicit job alignment justifications
