--- a/resume/resume.yaml
+++ b/resume/resume.yaml
@@ -50,9 +50,13 @@ experiences:
         startdate: January 2023
         enddate: December 2023
     highlights:
-      - Implemented Java/Spring Boot microservices for enterprise applications, improving data processing speed by 30% (from 10k to 13k transactions/sec) and system efficiency by 50% via RESTful API optimizations.
-      - Built a transaction pipeline using Apache Airflow, Kubernetes, and Docker, increasing batch-processing throughput by 60% (1.2M to 2M transactions/day).
-      - Automated AWS cloud infrastructure (EC2, S3, Lambda) deployments using Jenkins CI/CD pipelines, cutting operational costs by 30% ($150k/year saved).
+      - Spearheaded the development of enterprise-level applications using Java and Spring Boot, resulting in a 50% increase in system efficiency. Successfully implemented RESTful web services, improving data processing speed by 30%.
+      - Engineered a highly efficient, low latency client transaction pipeline system utilizing Airflow, Kubernetes, Kafka, and Docker; achieved 60% increase in batch-processing efficiency, leading to better productivity and faster transactions.
+      - Architected and launched back-end API and front-end UI using Java, React JS, Spring Boot, EC2, S3, and REST API in AWS, Elevated scalability and robustness of the mainframe pipeline by 80%.
+      - Pioneered the development of dynamic and responsive user interfaces using React JS, contributing to a 50% reduction in page load times and a 35% increase in user engagement metrics.
+      - Developed POJOs and DAOs for 80+ database entities using Spring JDBC and MyBatis, optimizing backend connectivity and performance within a Controller-Service layered architecture.
+      - Implemented CI/CD pipelines using Jenkins, which accelerated deployment cycles by 40% and improved code integration efficiency. Facilitated the deployment of applications on AWS, achieving a 20% less operational costs and a 30% increase in deployment speed.
+      - Utilized AWS technologies (EC2, S3, Lambda) to enhance system resilience by 50% and reduce operational costs by 30%. Achieved a 40% faster deployment speed, showcasing proficiency in cloud-based solutions.
 
   - company: Georgia State University
     skip_name: false
@@ -62,9 +66,9 @@ experiences:
         startdate: August 2021
         enddate: December 2022
     highlights:
-      - Published IEEE paper on a TensorFlow-based collision detection algorithm, improving accuracy by 80% (from 75% to 95%) and securing $1.6M in research grants.
-      - Developed a low-power IoT system using Python and MQTT, reducing device power consumption by 30% (from 12W to 8.4W).
-      - Automated grading system using Python/REST APIs, reducing evaluation time from 10 hours to 30 minutes per class (95% reduction).
+      - Conducted experiments to enhance scalable automobile safety using object detection and IoT sensors, resulting in a 30% reduction in overall system power using Python, JavaScript, SQL, and Java.
+      - Innovated a collision detection algorithm that performed 80% more adeptly than current models and published an IEEE paper on visual light communication, generating 1.6 million in revenue for M.O.R.S.E studio development.
+      - Developed a Python script to automate assignment management, reducing evaluation time by 95% using REST API.
 
   - company: Global Payments Inc
     skip_name: false
@@ -74,8 +78,10 @@ experiences:
         startdate: June 2022
         enddate: August 2022
     highlights:
-      - Engineered high-performance REST APIs using Spring Boot, improving system efficiency by 60% (response time reduced from 200ms to 80ms).
-      - Optimized Correspondence API lookup time by 40% (from 500ms to 300ms) via JUnit/Mockito testing and query tuning.
+      - Developed and optimized the Correspondence API leveraging Java and Spring framework, resulting in 40% reduction in account lookup time for client users and improved overall system response, following Agile Scrum development sprints.
+      - Engineered REST APIs by Spring Boot and Java features Collections Framework, Exception Handling, I/O System, Multi-Threading, and JDBC, resulting in 60% system efficiency and integration with external services.
+      - Constructed Spring components such as Controller, Validator, Resource Mapping using annotations to handle requests, built custom view templates, and devised Unit and Integration tests leveraging JUnit and Mockitos.
+      - Led problem-solving initiatives for complex full-stack projects, resolving over 95% of critical bugs within deadlines. Minimized downtime and maintained high standards of software quality and reliability.
 
 projects:
   - name: GSU IoT ThingsBoard | Kafka, Python, AWS
